# Chaos-forecasting

./: .gitignore  README.md  env.yml  lever.py  pyproject.toml  requirements.txt  setup.cfg
data/: chaotic
experiments/: phase1_ulam_benchmark.py
experiments/configs/: example.yaml
paper/: figs  outline.md
src/chaotic/: integrators.py  lyapunov.py  mc_runner.py  systems.py  train_diffusion.py  train_flow.py  ulam_edmd.py
src/common/: events.py  metrics.py  utils.py  viz.py
src/diffusion/: fp_solver.py  md_bridge.py  sde_sims.py
src/eval/: evaluate_pdf.py  reliability.py
src/quantum/: lindblad.py  qtraj.py
tests/: test_chaotic.py  test_diffusion.py  test_quantum.py
