[tool.poetry]
name = "chaos-forecasting"
version = "0.1.0"
description = "A project for forecasting chaotic systems using advanced statistical methods."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/chaos-forecasting"
repository = "https://github.com/yourusername/chaos-forecasting"
keywords = ["chaos", "forecasting", "machine learning", "quantum", "diffusion"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
scipy = "^1.7"
matplotlib = "^3.4"
pandas = "^1.3"
torch = "^1.9"
tensorflow = "^2.6"
scikit-learn = "^0.24"
seaborn = "^0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"