[metadata]
name = chaos-forecasting
version = 0.1.0
description = A project for forecasting chaotic systems using advanced statistical methods.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/chaos-forecasting
license = MIT

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    scikit-learn
    tensorflow  # or pytorch, depending on your implementation
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    black
    flake8
    isort